Add PDF processing, flashcards UI, and storage

--- a/biome.json
+++ b/biome.json
@@ -14,7 +14,8 @@
       "!dist",
       "!build",
       "!src/components/ui",
-      "!src/hooks/use-mobile.ts"
+      "!src/hooks/use-mobile.ts",
+      "!public/pdf.worker.min.mjs"
     ]
   },
   "formatter": {
