--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "amir-exam-pdf-to-flashcards",
+  "name": "mir-exam-pdf-to-flashcards",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -17,10 +17,12 @@
     "cmdk": "^1.1.1",
     "date-fns": "^4.1.0",
     "embla-carousel-react": "^8.6.0",
+    "idb": "^8.0.3",
     "input-otp": "^1.4.2",
     "lucide-react": "^0.564.0",
     "next": "16.1.6",
     "next-themes": "^0.4.6",
+    "pdfjs-dist": "^5.4.624",
     "radix-ui": "^1.4.3",
     "react": "19.2.3",
     "react-day-picker": "^9.13.2",
@@ -31,7 +33,8 @@
     "sonner": "^2.0.7",
     "tailwind-merge": "^3.4.1",
     "vaul": "^1.1.2",
-    "zod": "^4.3.6"
+    "zod": "^4.3.6",
+    "zustand": "^5.0.11"
   },
   "devDependencies": {
     "@biomejs/biome": "2.2.0",
